Exporting screenshot now automatically exports state with same filename

--- a/test_data_generator/Makefile
+++ b/test_data_generator/Makefile
@@ -1,6 +1,6 @@
 IMGUI_OBJECTS = imgui/imgui.o imgui/imgui_draw.o imgui/imgui_impl_sdl.o imgui/imgui_demo.o imgui/imgui_impl_opengl3.o imgui/imgui_widgets.o
 
-OBJECTS = main.o keyboard.o math3d.o rendering.o glew.o $(IMGUI_OBJECTS)
+OBJECTS = main.o keyboard.o math3d.o rendering.o sim.o glew.o $(IMGUI_OBJECTS)
 
 CPPFLAGS = -g -isystem. -isystemSDL -DGLEW_STATIC -DGLEW_NO_GLU -DIMGUI_IMPL_OPENGL_LOADER_GLEW
 
